--- a/liiga/package.json
+++ b/liiga/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "db-migrate-pg": "^1.5.2",
+    "dotenv": "^16.5.0",
     "next": "15.2.4",
+    "pg": "^8.16.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
